small alignment issue

--- a/src/styles/pages/projectsPage.scss
+++ b/src/styles/pages/projectsPage.scss
@@ -42,7 +42,7 @@
 			display: flex;
 			flex-direction: row;
 			justify-content: flex-start;
-			align-items: center;
+			align-items: start;
 		}
   }
 
